# newton-code-challenge

./: .gitignore  DESCRIPTION.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py
src/: calculate.proto  client.py  example.sh  request.py  server.py
src/newton/: __init__.py  cli.py  dbms.py  model.py  sgbd.py
src/newton/protobuf/: __init__.py  calculate_pb2.py  calculate_pb2_grpc.py  rpc_api.py  server.py  servicer.py
src/protocol/: __init__.py  calculate_pb2.py  calculate_pb2_grpc.py
test/: __init__.py  protobuf.py
