[metadata]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent

    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

    License :: OSI Approved :: MIT License

    Topic :: System :: Distributed Computing

[aliases]
dist = bdist_wheel sdist

[sdist]
formats = zip

[bdist_wheel]
python_tag = py3

[egg_info]
egg_base = build/lib
